--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,3 +1,123 @@
-h1{
-    color:aqua
+/* @import url('https://fonts.googleapis.com/css?family=League Spartan:wght@100;200;00;00;500;600;700;800;900&display=swap'); */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Spartan',sans-serif;
+    /* padding: 0; */
+    /* font-family: 'Spartan',sans-serif; */
+}
+
+h1 {
+    font-size: 45px;
+    line-height: 64px;
+    color: #222;
+}
+
+h2 {
+    font-size: 45px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4 {
+    font-size: 20px;
+    color: #222;
+}
+
+
+h6 {
+    font-size: 12px;
+    font-weight: 700;
+}
+
+p {
+    font-size: 16px;
+    color:#d0d2dc80;
+    margin: 15px 0 20px 0;
+}
+
+.section p1 {
+    padding: 40px 80px;
+}
+
+.section m1 {
+    padding: 40px 0px;
+}
+
+body{
+    width: 100%;
+}
+
+/* Header Start */
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 80px;
+    background: #d0d2dc80;
+    /* x axis - 0, y axis - 5px, radius - 15px */
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.06);
+}
+
+#navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#navbar li {
+    list-style: none;
+    padding: 0 20px;
+}
+
+#navbar li a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #0e0d0dc7;
+    transition: 0.3s ease;
+}
+
+#navbar li a:hover{
+    color: #088178;;
+    text-decoration: underline;
+}
+
+/* Home Page */
+
+#hero {
+    /* background-image: url("file:///D:/DBS/Classes/Web%20and%20Mobile%20Technologies/B9IS124_10508676_10612366_fitnessBusiness/fitnessBusiness/html/images/hero.png"); */
+    background-image: url("../images/hero06.jpg");
+    height: 90vh;
+    width: 100%;
+    background-size: cover;
+    background-position: top 0% right 0px;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero h4{
+    padding-bottom: 15px;
+}
+
+#hero h1{
+    color:#088178
+}
+
+#hero button{
+    background-image: url("../images/button.png");
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 15px 80px 15px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
 }
