--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Spartan',sans-serif;
+    font-family: 'Spartan', sans-serif;
     padding: 0;
 }
 
@@ -30,7 +30,7 @@ h6 {
 
 p {
     font-size: 16px;
-    color:#dadeed80;
+    color: #dadeed80;
     margin: 15px 0 20px 0;
 }
 
@@ -42,7 +42,7 @@ p {
     padding: 40px 0px;
 }
 
-body{
+body {
     width: 100%;
 }
 
@@ -85,7 +85,7 @@ body{
     transition: 0.3s ease;
 }
 
-#navbar li a:hover{
+#navbar li a:hover {
     color: #088178;
     text-decoration: underline;
 }
@@ -106,27 +106,69 @@ body{
     justify-content: center;
 }
 
-#hero h4{
+#hero h4 {
     padding-bottom: 15px;
 }
 
-#hero h1{
+#hero h1 {
     /* color:#0aaea3; */
     /* color:#088178; */
-    color:#0cc2a4c2;
+    color: #0cc2a4c2;
 }
 
-#hero button{
+#hero button {
     background-image: url("../images/button.png");
     background-color: transparent;
     /* color: #1d8e86; */
     /* color:#28bcb2; */
     /* color:#088178; */
-    color:bisque;
+    color: bisque;
     border: 0;
     padding: 15px 80px 15px 65px;
     background-repeat: no-repeat;
     cursor: pointer;
     font-weight: 700;
     font-size: 15px;
+}
+
+/* Product List page*/
+#page-header {
+    background-image: url("../images/usainbolt.png");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+}
+
+#page-header h2,
+#page-header p {
+    color: white;
+}
+
+#product1 {
+    text-align: center;
+}
+
+#product1 .pro-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+
+#product1 .pro {
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0;
+    border-radius: 25px;
+    transition: .2s;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    margin: 15px 5px;
 }
