--- a/html/css/style.css
+++ b/html/css/style.css
@@ -235,3 +235,8 @@ body {
     background: #088178;
     font-weight: 400;
 }
+
+.active-cyan-4 input[type=text]:focus:not([readonly]) {
+    border: 1px solid #4dd0e1;
+    box-shadow: 0 0 0 1px #4dd0e1;
+}
