Responsive on home page with images

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -5,6 +5,12 @@
     padding: 0;
 }
 
+.logo{
+    font-family: 'Island Moments', cursive;
+    color: #dadeed80;
+    font-size: 40px;
+}
+
 h1 {
     font-size: 45px;
     line-height: 64px;
@@ -44,6 +50,7 @@ p {
 
 body {
     width: 100%;
+    line-height: 1.5;
 }
 
 /* Header Start */
@@ -90,6 +97,27 @@ body {
     text-decoration: underline;
 }
 
+#mobile {
+    display: none;
+    align-items: center;
+}
+
+#close {
+    display: none;
+}
+
+/* #navbar li a:active::after,
+#navbar li a:hover::after 
+{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #088178;
+    position: absolute;
+    bottom:-4px;
+    left: 20px;
+} */
+
 /* Home Page */
 
 #hero {
@@ -130,6 +158,229 @@ body {
     font-weight: 700;
     font-size: 15px;
 }
+
+#feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#feature .fe-box {
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgb(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    border-radius: 4px;
+    /* margin: 15px 100px; */
+    margin: 5% 2%;
+}
+
+#feature .fe-box:hover {
+    box-shadow: 20px 20px 34px rgb(70, 62, 221, 0.1);
+}
+
+#feature .fe-box img {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#feature .fe-box h6 {
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+}
+
+#feature .fe-box:nth-child(2) h6 {
+    background-color: #cdebbc;
+}
+
+#feature .fe-box:nth-child(3) h6 {
+    background-color: #d1e8f2;
+}
+
+#feature .fe-box:nth-child(4) h6 {
+    background-color: #cdd4f8;
+}
+
+#feature .fe-box:nth-child(5) h6 {
+    background-color: beige;
+}
+
+#producth1 .prh-container {
+    display: flex;
+    justify-content: space-between;
+    /* padding-top: 20px; */
+    flex-wrap: wrap;
+}
+
+#producth1 .pr {
+    width: 16%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+    /* margin: 15px 30px;  */
+    margin: 2% 4%;
+    transition: 0.2s ease;
+    position: relative;
+    border-radius: 25px;
+}
+
+#producth1 {
+    text-align: center;
+}
+
+#producth1 .pr-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* padding-top: 20px; */
+}
+
+
+#producth1 .pr:hover {
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+
+#producth1 p {
+    font-size: 20px;
+    color: #61636b80;
+    /* margin: 15px 0 20px 0; */
+}
+
+#producth1 .pr img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+#producth1 .pr .des {
+    text-align: start;
+    padding: 0px 5px;
+}
+
+#producth1 .pr .des span {
+    color: #dfdfea;
+    font-size: 12px;
+}
+
+#producth1 .pr .des h5 {
+    padding-top: 7px;
+    color: #1a1a1a;
+    font-size: 14px;
+}
+
+#producth1 .pr .des .star i {
+    font-size: 12px;
+    color: rgb(243, 181, 25);
+}
+
+#producth1 .pr .des .h4 {
+    padding-top: 7px;
+    color: #088178;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.container {
+    max-width: 1170px;
+    margin: auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.product-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/* .pro-ul{
+    list-style: none;
+    padding-left: 0%;
+} */
+
+ul {
+    list-style: none;
+}
+
+.footer {
+    background-color: #24262b;
+    padding: 70px 0;
+}
+
+.footer-col {
+    width: 25%;
+    padding: 0 15px;
+}
+
+.footer-col h4 {
+    font-size: 18px;
+    color: #ffffff;
+    text-transform: capitalize;
+    font-weight: 500;
+    margin-bottom: 35px;
+    position: relative;
+}
+
+.footer-col h4::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    background-color: #e91e63;
+    height: 2px;
+    box-sizing: border-box;
+    width: 50px;
+}
+
+.footer-col ul li:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+    font-size: 16px;
+    color: #ffffff;
+    text-transform: capitalize;
+    text-decoration: none;
+    font-weight: 300;
+    color: #bbbbbb;
+    display: block;
+    transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+    color: #ffffff;
+    padding-left: 10px;
+}
+
+.footer-col .social-links a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+    color: #24262b;
+    background-color: #ffffff;
+}
+
+
+
 
 /* Product List page*/
 #page-header {
@@ -239,4 +490,178 @@ body {
 .active-cyan-4 input[type=text]:focus:not([readonly]) {
     border: 1px solid #4dd0e1;
     box-shadow: 0 0 0 1px #4dd0e1;
+}
+
+
+/* Start Media Query */
+
+/* responsive */
+@media(max-width:767px) {
+    .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width:574px) {
+    .footer-col {
+        width: 100%;
+    }
+}
+
+@media(max-width:799px) {
+    .section p1 {
+        padding: 40px 80px;
+    }
+
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 150px;
+        /* background-color:  #d0d2dc80; */
+        background-color: #24262b;
+        box-shadow: 0 40px 60px rgb(0, 0, 0, 1);
+        padding: 80px 0 0 10px;
+        transition: 0.3s ease;
+    }
+
+    #navbar li {
+        margin-bottom: 25px;
+    }
+
+    #mobile {
+        display: flex;
+        align-items: center;
+    }
+
+    #mobile i {
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+
+    #mobile #bar {
+        /* text-decoration: none; */
+        font-size: 16px;
+        font-weight: 600;
+        color: #d0d2dc80;
+        /* color: #0e0d0dc7; */
+        transition: 0.3s ease;
+    }
+
+    #navbar.active {
+        right: 0px;
+    }
+
+    /* #mobile a {
+        text-decoration: underline;
+        font-size: 16px;
+        font-weight: 600;
+        color: #d0d2dc80;
+        /* color: #0e0d0dc7; */
+    /* transition: 0.3s ease; */
+    */
+    /* #mobile a:hover {
+        color: #088178;
+        text-decoration: underline;
+    } */
+
+    #navbar li a {
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 600;
+        color: #d0d2dc80;
+        /* color: #0e0d0dc7; */
+        transition: 0.3s ease;
+    }
+
+    #navbar li a:hover {
+        color: #088178;
+        text-decoration: underline;
+    }
+
+    #close {
+        display: initial;
+        text-decoration: none;
+        font-size: 24px;
+        font-weight: 600;
+        color: #d0d2dc80;
+        /* color: #0e0d0dc7; */
+        transition: 0.3s ease;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+
+    #lg-bag {
+        display: none;
+    }
+
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-box {
+        margin: 15px 15px;
+    }
+
+    #producth1 .prh-container {
+        justify-content: center;
+        margin: 15px 15px;
+    }
+    .footer-col {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+}
+
+@media(max-width:477px) {
+    #header {
+        padding: 10px 30px;
+    }
+
+    #hero {
+        height: 70vh;
+        padding: 0 20px;
+        background-position: top 30% right 30%;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+
+    #producth1 .pr {
+        width: 100%;
+    }
+
+    .footer-col {
+        width: 50%;
+        margin-bottom: 50px;
+    }
+
 }
