--- a/html/css/productstyle.css
+++ b/html/css/productstyle.css
@@ -1,30 +1,31 @@
 /* Footer */
 
-.pro-container{
+.pro-container {
     max-width: 1170px;
     margin: auto;
 }
 
-.pro-row{
+.pro-row {
     display: flex;
     flex-wrap: wrap;
 }
-.pro-ul{
+
+.pro-ul {
     list-style: none;
     padding-left: 0%;
 }
 
-.pro-footer{
+.pro-footer {
     background-color: #24262b;
     padding: 70px 0;
 }
 
 .pro-footer-col {
-width: 25%;
-padding: 0 15px;
+    width: 25%;
+    padding: 0 15px;
 }
 
-.pro-footer-col h4{
+.pro-footer-col h4 {
     font-size: 18px;
     color: #ffffff;
     text-transform: capitalize;
@@ -33,7 +34,7 @@ padding: 0 15px;
     position: relative;
 }
 
-.pro-footer-col h4::before{
+.pro-footer-col h4::before {
     content: '';
     position: absolute;
     left: 0;
@@ -44,11 +45,11 @@ padding: 0 15px;
     width: 50px;
 }
 
-.pro-footer-col ul li:not(:last-child){
+.pro-footer-col ul li:not(:last-child) {
     margin-bottom: 10px;
 }
 
-.pro-footer-col ul li a{
+.pro-footer-col ul li a {
     font-size: 16px;
     color: #ffffff;
     text-transform: capitalize;
@@ -59,41 +60,312 @@ padding: 0 15px;
     transition: all 0.3s ease;
 }
 
-.pro-footer-col ul li a:hover{
+.pro-footer-col ul li a:hover {
     color: #ffffff;
     padding-left: 10px;
 }
 
-.pro-footer-col .social-links a{
+.pro-footer-col .social-links a {
     display: inline-block;
     height: 40px;
     width: 40px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(255, 255, 255, 0.2);
     margin: 0 10px 10px 0;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
-    color:#ffffff;
+    color: #ffffff;
     transition: all 0.5s ease;
 }
 
-.pro-footer-col .social-links a:hover{
-    color:#24262b;
+.pro-footer-col .social-links a:hover {
+    color: #24262b;
     background-color: #ffffff;
 }
 
 /* responsive */
-@media(max-width:767px)
-{
-    .footer-col{
+@media(max-width:767px) {
+    .footer-col {
         width: 50%;
         margin-bottom: 30px;
     }
 }
 
-@media(max-width:574px)
-{
-    .footer-col{
+@media(max-width:574px) {
+    .footer-col {
         width: 100%;
     }
+
+    .modal {
+        max-width: 75% !important;
+        min-width: 75% !important;
+    }
 }
+
+/* popup */
+
+.modal-container {
+    background-color: #000c;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transform: scale(0);
+    z-index: 3;
+}
+
+.clicked-modal {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.modal-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 30px;
+    border-bottom: 1px solid #ffffff33;
+}
+
+.modal-head h4 {
+    font-family: 'Spartan', sans-serif;
+    color: #bbbbbb;
+    font-size: 20px;
+    line-height: 116%;
+    font-style: italic;
+    /* font-weight: 700;
+    letter-spacing: -0.4px;
+    text-transform: uppercase;
+    padding: 0;
+    margin: 0; */
+}
+
+.modal-form {
+    padding: 24px 30px;
+}
+
+/* .btnreserve {
+    text-align: center;
+    padding: 24px 30px;
+} */
+
+.text-field {
+    margin-top: 10px;
+    height: 50px;
+    margin-bottom: 0px;
+    padding: 16px 20px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: hsla(0, 0%, 100%, 0.15);
+    background-color: transparent;
+    color: #fff;
+    font-size: 16px;
+    line-height: 140%;
+    width: 100%;
+    vertical-align: middle;
+}
+
+
+.modal {
+    max-width: 480px;
+    min-width: 450px;
+    background-color: #000;
+    border: 1px solid #ffffff33;
+}
+
+.material-symbols-outlined {
+    color: #ffffff33;
+    cursor: pointer;
+}
+
+/* #reserveBtn {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+}
+
+#reserveBtn:hover {
+    background-color: #555555;
+    color: white;
+} */
+
+@media (min-width: 568px) {
+    h1 {
+        font-size: 3em;
+    }
+}
+
+.modal-container .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.modal-container .container .buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-container .container a {
+    padding: 15px 20px;
+    font: 13px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    margin: 1em;
+}
+
+.modal-container .container a:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.20), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
+}
+
+@media (min-width: 417px) and (max-width: 567px) {
+    .modal-container .container a {
+        padding: 15px 30px;
+        font: 16px;
+    }
+}
+
+@media (min-width: 568px) {
+    .modal-container .container a {
+        padding: 15px 50px;
+        font: 20px;
+    }
+}
+
+/* .reserveBtn {
+    color: white;
+    background-color: blue;
+    border: 5px solid transparent;
+    transition: .2s ease;
+    border-radius: 50px;
+} */
+
+/* Reservation Font Variables */
+@media (min-width: 417px) and (max-width: 567px) {
+    h1 {
+        font-size: 2em;
+    }
+}
+
+@media (min-width: 568px) {
+    h1 {
+        font-size: 3em;
+    }
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+/* .modal-container a {
+    padding: 15px 20px;
+    font: 13px 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    margin: 1em;
+} */
+
+
+@media (min-width: 417px) and (max-width: 567px) {
+    .reserveBtn {
+        padding: 15px 30px;
+        font: 16px 'Montserrat', sans-serif;
+        ;
+    }
+    @media (min-width: 568px) {
+        .reserveBtn {
+            padding: 15px 50px;
+            font: 20px 'Montserrat', sans-serif;
+            ;
+        }
+    }
+}
+
+.reserveBtn {
+    color: white;
+    background-color: #2d7eff;
+    border: 5px solid transparent;
+    transition: .2s ease;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.reserveBtn:hover {
+    color: #2d7eff;
+    background-color: white;
+    transform: scale(1.1);
+    border: 5px solid #2d7eff;
+}
+
+.reserveBtn:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.20), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
+}
+
+.modal-container .container .reserveBtn {
+    padding: 15px 20px;
+    font: 13px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    margin: 1em;
+}
+
+.modal-container .container .reserveBtn:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.20), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
+}
+
+/* reservation */
+
+  /* #form #email {
+    width: 300px;
+    background: #292929;
+    outline: none;
+    border: none;
+    padding: 10px;
+    border-radius: 6px;
+    color: #fff;
+    font-style: 18px;
+  }*/
+
+  #form #email {
+    width: 300px;
+    background: #292929;
+    outline: none;
+    border: none;
+    padding: 10px;
+    border-radius: 6px;
+    color: #fff;
+    font-style: 18px;
+  } 
+  
+  #form .input-box {
+    position: relative;
+  }
+  
+  #text {
+    display: block;
+    color: #000;
+    font-weight: 300;
+    font-style: italic;
+    padding: 5px;
+  }
+  
