--- a/html/css/style.css
+++ b/html/css/style.css
@@ -65,7 +65,7 @@ body {
     /* background-color: #e3e6f3; */
     /* x axis - 0, y axis - 5px, radius - 15px */
     box-shadow: 0 5px 15px rgb(0, 0, 0, 0.06);
-    z-index: 999;
+    z-index: 1;
     position: sticky;
     top: 0;
     left: 0;
@@ -618,13 +618,51 @@ ul {
     }
 
     #producth1 .prh-container {
-        justify-content: center;
+        justify-content: space-evenly;
         margin: 15px 15px;
     }
     .footer-col {
         width: 50%;
         margin-bottom: 50px;
     }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 600px) and (min-height: 9px) {
+    #feature {
+        justify-content: space-evenly;
+    }
+
+    #feature .fe-box {
+        width: 25%;
+        /* margin: 0 0 15px 0; */
+    }
+
+    #producth1 .prh-container {
+        justify-content: space-evenly;
+        /* width: 100%; */
+        margin: 15px 15px;
+    }
+
+}
+
+
+@media screen and (max-width: 1280px) and (max-height: 800px) and (min-height: 769px) {
+
+    #feature {
+        justify-content: space-evenly;
+    }
+
+    #feature .fe-box {
+        width: 155px;
+        /* margin: 0 0 15px 0; */
+    }
+
+    #producth1 .prh-container {
+        justify-content: space-evenly;
+        width: 100%;
+        /* margin: 15px 15px; */
+    }
+
 }
 
 @media(max-width:477px) {
@@ -647,7 +685,7 @@ ul {
     }
 
     #feature {
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     #feature .fe-box {
