--- a/html/css/productView.css
+++ b/html/css/productView.css
@@ -49,11 +49,69 @@
     outline: none;
 }
 
-#prodetails .single-pro-details button {
+#prodetails .single-pro-details .cart-button {
     background: #088178;
     color: #fff;
+    margin-top: 17px;
+    border-radius: 12px;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 #prodetails .single-pro-details span {
     line-height: 25px;
+}
+
+.wrapper {
+    height: 120px;
+    min-width: 380px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFF;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.wrapper span {
+    width: 100%;
+    text-align: center;
+    font-size: 55px;
+    font-weight: 600;
+    cursor: pointer;
+    user-select: none;
+}
+
+.wrapper span.num {
+    font-size: 50px;
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+    border-left: 2px solid rgba(0, 0, 0, 0.2);
+    pointer-events: none;
+}
+
+#incrDecr {
+    width: 30px;
+    height: 30px;
+    font-size: 25px;
+    background-color: burlywood;
+    color: honeydew;
+}
+
+#prInput {
+    width: 38px !important;
+    height: 31px !important;
+    /* font-size: 25px; */
+    /* background-color: burlywood; */
+    /* color: honeydew; */
+}
+
+.quantityContainer{
+    display: flex;
+    align-items: center;
 }
