Updated Navbar and hero section

--- a/html/css/productView.css
+++ b/html/css/productView.css
@@ -106,6 +106,7 @@
 #prInput {
     width: 38px !important;
     height: 31px !important;
+    margin: 8px;
     /* font-size: 25px; */
     /* background-color: burlywood; */
     /* color: honeydew; */
