--- a/html/css/style.css
+++ b/html/css/style.css
@@ -665,6 +665,8 @@ ul {
     margin: 0;
     display: flex;
     align-items: center;
+    cursor: pointer;
+    font-size: 14px;
 }
 
 .navlink-container {
@@ -982,7 +984,7 @@ a {
 
 .mid-window{
     height: 360px;
-    background-image: url(/images/lastsection.png);
+    background-image: url(../images/lastsection.png);
     background-position: 50% 50%;
     background-size: cover;
     background-attachment: fixed;
@@ -1094,4 +1096,28 @@ body {
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+/* Search */
+
+.search-bar{
+    display: block;
+    width: 20%;
+    border: 1px solid #cccccc;
+    align-self: stretch;
+    border-style: none;
+    border-radius: 0px;
+    background-color: #f5f5f5;
+    color: #18181d;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: none;
+    padding: 15px 15px;
+}
+
+
+
+.search-bar:focus{
+    outline: none;
+    background-color: #eeecec;
 }
