--- a/html/css/productView.css
+++ b/html/css/productView.css
@@ -107,9 +107,9 @@
     width: 38px !important;
     height: 31px !important;
     margin: 8px; */
-    /* font-size: 25px; */
-    /* background-color: burlywood; */
-    /* color: honeydew; */
+/* font-size: 25px; */
+/* background-color: burlywood; */
+/* color: honeydew; */
 /* }
 
 .quantityContainer{
@@ -118,7 +118,7 @@
 } */
 
 /* new Css */
-.product-container{
+.product-container {
     padding-inline: 36px;
     padding-top: 90px;
     padding-bottom: 20px;
@@ -129,7 +129,7 @@
     flex: 1;
 }
 
-.hero1{
+.hero1 {
     position: relative;
     display: grid;
     width: 100%;
@@ -144,7 +144,7 @@
     grid-template-rows: auto;
 }
 
-.product-content{
+.product-content {
     grid-row-start: span 1;
     grid-row-end: span 1;
     grid-column-start: span 4;
@@ -159,7 +159,7 @@
     justify-content: flex-end;
 }
 
-.product-name{
+.product-name {
     margin-top: 20px;
     margin-bottom: 25px;
     font-size: 44px;
@@ -170,7 +170,7 @@
     color: #18181d;
 }
 
-.product-desc{
+.product-desc {
     margin-bottom: 10px;
     opacity: 0.7;
     font-size: 16px;
@@ -180,7 +180,7 @@
     font-weight: 500;
 }
 
-.product-price{
+.product-price {
     margin-top: 10px;
     margin-bottom: 15px;
     font-size: 30px;
@@ -188,10 +188,12 @@
     font-weight: 300;
     text-transform: none;
 }
-.cart-container{
+
+.cart-container {
     margin-top: 30px;
 }
-.commerce-add-to-cart-form{
+
+.commerce-add-to-cart-form {
     display: flex;
     margin-bottom: 0px;
     -webkit-box-orient: vertical;
@@ -203,7 +205,7 @@
     margin-left: 0px;
 }
 
-.quantity-label{
+.quantity-label {
     display: block;
     margin-bottom: 10px;
     opacity: 0.7;
@@ -214,7 +216,7 @@
     color: #000;
 }
 
-.cart-field{
+.cart-field {
     margin-bottom: 15px;
     width: 100%;
     padding: 20px 20px;
@@ -228,7 +230,7 @@
     text-transform: none;
 }
 
-.cart-button{
+.cart-button {
     display: flex;
     padding: 18px 30px;
     justify-content: center;
@@ -245,7 +247,7 @@
     cursor: pointer;
 }
 
-.main-img{
+.main-img {
     background-image: url(../images/Equipment_Images/Dumbell/f2.2_D.jpg);
     grid-row-start: span 1;
     grid-row-end: span 1;
@@ -258,7 +260,7 @@
     display: inline-block;
 }
 
-.item-list-container{
+.item-list-container {
     grid-row-start: span 1;
     grid-row-end: span 1;
     grid-column-start: span 2;
@@ -266,7 +268,7 @@
     align-self: end;
 }
 
-.list-img{
+.list-img {
     width: 173px;
     height: 173px;
     margin-top: 36px;
@@ -274,17 +276,117 @@
     background-size: cover;
 }
 
-.image-cover{
+.image-cover {
     width: 173px;
     height: 173px;
     position: absolute;
-    
+
 }
 
-.image-list{
+.image-list {
     position: relative;
 }
 
-.image-cover:hover{
-     background-color: #ffffff2b;
+.image-cover:hover {
+    background-color: #ffffff2b;
+}
+
+@media(max-width:980px) {
+    .hero1 {
+        width: 100%;
+        max-width: 738px;
+        grid-column-gap: 24px;
+        grid-row-gap: 30px;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+
+    .product-content {
+        grid-row-start: span 1;
+        grid-row-end: span 1;
+        grid-column-start: span 8;
+        grid-column-end: span 8;
+    }
+
+    .main-img {
+        grid-column-end: 9;
+        grid-column-start: 1;
+        grid-row-end: 2;
+        grid-row-start: 1;
+    }
+
+    .item-list-container {
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-column-gap: 24px;
+        grid-row-gap: 24px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto;
+        grid-row-end: 3;
+        grid-row-start: 2;
+    }
+
+}
+@media(max-width:1024px){
+    .item-list-container{
+        grid-column-gap: 9px
+    }
+    
+}
+
+@media(max-width:950px){
+    .list-img{
+        width: 150px;
+        height: 150px;
+    }
+    
+}
+
+@media(max-width:700px){
+    .list-img{
+        width: 120px;
+        height: 120px;
+    }
+    
+}
+
+
+@media(max-width:590px){
+    .list-img{
+        width: 100px;
+        height: 100px;
+    }
+    
+}
+
+@media(max-width:500px){
+    .list-img{
+        width: 70px;
+        height: 70px;
+    }
+    
+    
+}
+
+@media(max-width:450px){
+    .list-img{
+        width: 60px;
+        height: 60px;
+    }
+    
+}
+
+@media(max-width:380px){
+    .list-img{
+        width: 50px;
+        height: 50px;
+    }
+    
+}
+
+@media(max-width:352px){
+    .list-img{
+        width: 50px;
+        height: 50px;
+    }
+    
 }
