--- a/html/css/style.css
+++ b/html/css/style.css
@@ -722,13 +722,13 @@ ul {
     margin-top: 0px;
     margin-bottom: 0px;
     font-family: 'Work Sans', sans-serif;
-    font-size: 35px;
-    line-height: 35px;
+    font-size: 60px;
+    line-height: 50px;
     font-weight: 300;
     color: #ffffff70;
     position: absolute;
     bottom: 40px;
-    right: 105px;
+    right: 50%;
     width: 29vw;
     animation: heroanimation 4s infinite cubic-bezier(0.42, 0, 0, 1.94);
 }
@@ -851,7 +851,7 @@ ul {
     flex-direction: column;
     justify-content: flex-end;
     align-items: stretch;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(24, 24, 29, 0.1)), to(rgba(24, 24, 29, 0.1)));
+    /* background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(24, 24, 29, 0.1)), to(rgba(24, 24, 29, 0.1))); */
     background-image: linear-gradient(180deg, rgba(24, 24, 29, 0.1), rgba(24, 24, 29, 0.1));
     opacity: 0;
     text-decoration: none;
@@ -879,9 +879,6 @@ a {
 }
 
 .product-image {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     height: 480px;
     -webkit-box-pack: justify;
@@ -1036,9 +1033,6 @@ body {
 
 .hero6-text {
     margin-bottom: 30px;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
     flex: 1;
 }
 
@@ -1121,3 +1115,73 @@ body {
     outline: none;
     background-color: #eeecec;
 }
+
+.navlink-container-resp{
+    display: none;
+}
+.resp-nav{
+    display: none;
+}
+
+@media(max-width:980px){
+    .navlink-container{
+        display:none;
+    }
+    .navlink-container-resp{
+        display: block;
+
+    }
+    .resp-nav{
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
+        top: 74px;
+        right:0px;
+        background-color: white;
+    }
+    .nav-link{
+        padding-block: 15px;
+        width: 100%;
+        text-align: center;
+
+    }
+
+    .resp-nav.clicked{
+        display: flex;
+    }
+    .product-container {
+        grid-row-start: span 1;
+        grid-row-end: span 1;
+        grid-column-start: span 4;
+        grid-column-end: span 4;
+    }
+}
+
+@media(max-width:782px){
+    .product-container {
+        grid-row-start: span 1;
+        grid-row-end: span 1;
+        grid-column-start: span 6;
+        grid-column-end: span 6;
+    }
+    .hero-section-large-text{
+        font-size: 35px;
+    }
+    .search-bar{
+        width: 80%;
+    }
+
+}
+
+@media(max-width:450px){
+    .product-container {
+        grid-row-start: span 1;
+        grid-row-end: span 1;
+        grid-column-start: span 10;
+        grid-column-end: span 10;
+    }
+
+}   
