--- a/html/css/productstyle.css
+++ b/html/css/productstyle.css
@@ -105,7 +105,7 @@
 /* popup */
 
 .modal-container {
-    background-color: #000c;
+    background-color: #f5f1f166;
     position: fixed;
     height: 100%;
     width: 100%;
