--- a/html/css/style.css
+++ b/html/css/style.css
@@ -981,7 +981,7 @@ a {
 
 .mid-window{
     height: 360px;
-    background-image: url(../images/lastsection.png);
+    background-image: url(../images/hero1.jpg);
     background-position: 50% 50%;
     background-size: cover;
     background-attachment: fixed;
